--- a/charts-template.html
+++ b/charts-template.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <!--[if IE]><script language="javascript" type="text/javascript" src="http://flot.googlecode.com/svn/trunk/excanvas.min.js"></script><![endif]-->
-        <script language="javascript" type="text/javascript" src="http://flot.googlecode.com/svn/trunk/jquery.js"></script>
-        <script language="javascript" type="text/javascript" src="http://flot.googlecode.com/svn/trunk/jquery.flot.js"></script>
+        <!--[if IE]><script language="javascript" type="text/javascript" src="./excanvas.min.js"></script><![endif]-->
+        <script language="javascript" type="text/javascript" src="./jquery.js"></script>
+        <script language="javascript" type="text/javascript" src="./jquery.flot.js"></script>
     </head>
     <body>
 
