Print up to two decimals for seconds

--- a/charts-template.html
+++ b/charts-template.html
@@ -28,7 +28,7 @@
     };
 
     yaxis_runtime_settings = {
-        tickFormatter: function(num, obj) { return num + ' sec.'; }
+        tickFormatter: function(num, obj) { return (+num.toFixed(2)) + ' sec.'; }
     };
 
     yaxis_memory_settings = {
