--- a/charts-template.html
+++ b/charts-template.html
@@ -114,6 +114,7 @@
         plot_chart(chart_data['sequentialread-runtime'], '#sequentialread-runtime', '#sequentialread-runtime-choices', runtime_settings);
         plot_chart(chart_data['random-runtime'], '#random-runtime', '#random-runtime-choices', runtime_settings);
         plot_chart(chart_data['randomread-runtime'], '#randomread-runtime', '#randomread-runtime-choices', runtime_settings);
+        plot_chart(chart_data['iteration-runtime'], '#iteration-runtime', '#iteration-runtime-choices', runtime_settings);
         plot_chart(chart_data['delete-runtime'], '#delete-runtime', '#delete-runtime-choices', runtime_settings);
         plot_chart(chart_data['sequential-memory'], '#sequential-memory', '#sequential-memory-choices', memory_settings);
         plot_chart(chart_data['insertstring-runtime'], '#insertstring-runtime', '#insertstring-runtime-choices', runtime_settings);
@@ -169,6 +170,11 @@
 <h3>Random Reads: Execution Time (integers)</h3>
 <div class="chart" id="randomread-runtime"></div>
 <div class="choices" id="randomread-runtime-choices"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+
+<h3>Iteration: Execution Time (integers)</h3>
+<div class="chart" id="iteration-runtime"></div>
+<div class="choices" id="iteration-runtime-choices"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 
 <h3>Memory Usage (integers)</h3>
