Update version of hopscotch_map

--- a/charts-template.html
+++ b/charts-template.html
@@ -160,7 +160,7 @@
 <div class="choices" id="randomshufflerange-runtime-choices"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 
-<h3>Random full inserts: execution yime (integers)</h3>
+<h3>Random full inserts: execution time (integers)</h3>
 <div class="chart" id="randomfull-runtime"></div>
 <div class="choices" id="randomfull-runtime-choices"></div>
 <div class="xaxis-title">number of entries in hash table</div>
