--- a/charts-template.html
+++ b/charts-template.html
@@ -122,10 +122,12 @@
         plot_chart(chart_data['randomfull-memory'], '#randomfull-memory', '#randomfull-memory-choices', memory_settings);
         plot_chart(chart_data['insertsmallstring-runtime'], '#insertsmallstring-runtime', '#insertsmallstring-runtime-choices', runtime_settings);
         plot_chart(chart_data['readsmallstring-runtime'], '#readsmallstring-runtime', '#readsmallstring-runtime-choices', runtime_settings);
+        plot_chart(chart_data['missreadsmallstring-runtime'], '#missreadsmallstring-runtime', '#missreadsmallstring-runtime-choices', runtime_settings);
         plot_chart(chart_data['deletesmallstring-runtime'], '#deletesmallstring-runtime', '#deletesmallstring-runtime-choices', runtime_settings);
         plot_chart(chart_data['insertsmallstring-memory'], '#insertsmallstring-memory', '#insertsmallstring-memory-choices', memory_settings);
         plot_chart(chart_data['insertstring-runtime'], '#insertstring-runtime', '#insertstring-runtime-choices', runtime_settings);
         plot_chart(chart_data['readstring-runtime'], '#readstring-runtime', '#readstring-runtime-choices', runtime_settings);
+        plot_chart(chart_data['missreadstring-runtime'], '#missreadstring-runtime', '#missreadstring-runtime-choices', runtime_settings);
         plot_chart(chart_data['deletestring-runtime'], '#deletestring-runtime', '#deletestring-runtime-choices', runtime_settings);
         plot_chart(chart_data['insertstring-memory'], '#insertstring-memory', '#insertstring-memory-choices', memory_settings);
     });
@@ -232,6 +234,11 @@
 <div class="choices" id="readsmallstring-runtime-choices"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 
+<h3>Miss reads: execution time (small strings)</h3>
+<div class="chart" id="missreadsmallstring-runtime"></div>
+<div class="choices" id="missreadsmallstring-runtime-choices"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+
 <h3>Memory usage of inserts (small strings)</h3>
 <div class="chart" id="insertsmallstring-memory"></div>
 <div class="choices" id="insertsmallstring-memory-choices"></div>
@@ -252,6 +259,11 @@
 <h3>Reads: execution time (strings)</h3>
 <div class="chart" id="readstring-runtime"></div>
 <div class="choices" id="readstring-runtime-choices"></div>
+<div class="xaxis-title">number of entries in hash table</div>
+
+<h3>Miss reads: execution time (strings)</h3>
+<div class="chart" id="missreadstring-runtime"></div>
+<div class="choices" id="missreadstring-runtime-choices"></div>
 <div class="xaxis-title">number of entries in hash table</div>
 
 <h3>Memory usage of inserts (strings)</h3>
